<resources>
    <string name="app_name">TemiV1</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_my_name_is_temi_and_i_ll_be_finding_fun_dances_for_you_today_before_we_start_lets_make_sure_the_settings_are_right_for_you_can_you_hear_me">Hello my name is Temi and I\'ll be finding fun dances for you today. Before we start lets make sure the settings are right for you. Can you hear me?</string>
    <string name="great_now_i_will_ask_you_some_questions_to_understand_your_movement_capabilities_so_that_i_can_recommend_and_play_a_dance_for_you_to_follow_on_the_tablet_if_at_any_point_you_want_to_stop_the_process_either_press_the_quot_x_quot_button_on_the_top_right_of_the_screen_or_say_quot_hey_temi_stop_quot_can_you_confirm_you_are_happy_to_proceed">Great! Now I will ask you some questions to understand your movement capabilities so that I can recommend and play a dance for you to follow on the tablet. If at any point you want to stop the process either press the \"X\" button on the top right of the screen or say \"Hey Temi, stop.\" Can you confirm you are happy to proceed?</string>
    <string name="would_you_like_the_screen_brighter">Would you like the screen brighter?</string>
    <string name="hello_my_name_is_temi_and_i_ll_be_finding_fun_dances_for_you_today_before_we_start_lets_make_sure_the_settings_are_right_for_you_can_you_hear_me_or_see_the_screen">Hello my name is Temi and I’ll be finding fun dances for you today. Before we start lets make sure the settings are right for you. Can you hear me or see the screen?</string>
    <string name="is_that_bright_enough">Is that bright enough?</string>
    <string name="would_you_like_the_screen_darker">Would you like the screen darker?</string>
    <string name="is_that_dark_enough">Is that dark enough?</string>
    <string name="would_you_like_the_volume_louder">Would you like the volume louder?</string>
    <string name="is_that_loud_enough">Is that loud enough?</string>
    <string name="would_you_like_the_volume_quieter">Would you like the volume quieter?</string>
    <string name="is_that_quiet_enough">Is that quiet enough?</string>
    <string name="back">Back</string>
    <string name="is_the_text_the_right_size_for_you">Is the text the right size for you?</string>
    <string name="would_you_like_the_text_bigger">Would you like the text bigger?</string>
    <string name="is_the_text_big_enough">Is the text big enough?</string>
    <string name="would_you_like_the_text_smaller">Would you like the text smaller?</string>
    <string name="is_the_text_small_enough">Is the text small enough?</string>
    <string name="dance_move">Dance Move</string>
    <string name="choose_your_dance_moves">Choose Your Dance Moves</string>
    <string name="btn_continue">Continue</string>
    <string name="dance_move_name">Dance Move Name</string>
    <string name="dance_move_image_desc">Image of dance move</string>
    <string name="dance_video_loading">Dance video loading...</string>
    <string name="your_dance_video_will_play_below">Your dance video will play below</string>
    <string name="select_your_song">Select Your Song</string>
    <string name="genre">Genre</string>
    <string name="image_of_song_note">Image of Song Note</string>
    <string name="next_move_label">Next Move: \n%1$s</string>
    <string name="how_physically_challenging_did_you_find_that_dance">How physically challenging did you find that dance?</string>
    <string name="_1_not_at_all_challenging">1 - Not at all challenging</string>
    <string name="_2_a_little_challenging">2 - A little challenging</string>
    <string name="_3_somewhat_challenging">3 - Somewhat challenging</string>
    <string name="_4_very_challenging">4 - Very challenging</string>
    <string name="_5_extremely_challenging">5 - Extremely challenging</string>
    <string name="how_well_were_you_able_to_follow_the_moves_during_the_dance">How well were you able to follow the moves during the dance?</string>
    <string name="_1_not_at_all">1 - Not at all</string>
    <string name="_1_none_of_the_moves">1 - None of the moves</string>
    <string name="_2_a_few_of_the_moves">2 - A few of the moves</string>
    <string name="_3_some_of_the_moves">3 - Some of the moves</string>
    <string name="_4_most_of_the_moves">4 - Most of the moves</string>
    <string name="_5_all_of_the_moves">5 - All of the moves</string>
    <string name="the_next_level_involves_a_faster_pace_increasing_from_100bpm_to_110bpm_and_a_higher_number_of_reps_increasing_from_8_to_12_for_each_move_would_you_like_to_give_the_next_level_a_try">The next level involves a faster pace increasing from 100BPM to 110BPM and a higher number of reps increasing from 8 to 12 for each move. Would you like to give the next level a try?</string>
    <string name="the_next_level_is_slightly_faster_and_has_more_reps_per_move_12_would_you_like_to_try_it">The next level is slightly faster and has more reps per move (12). Would you like to try it?</string>
    <string name="the_next_level_is_slightly_faster_and_has_12_reps_per_move_would_you_like_to_try_it">The next level is slightly faster and has 12 reps per move. Would you like to try it?</string>
    <string name="would_you_like_to_change_your_level">Would you like to change your level?</string>
    <string name="go_up_a_level">Go up a level</string>
    <string name="stay_at_the_same_level">Stay at the same level</string>
    <string name="go_down_a_level">Go down a level</string>
    <string name="are_you_able_to_lift_your_arms_above_shoulder_height">Are you able to lift your hands above shoulder height?</string>
    <string name="thank_you_for_interacting_with_me_today_the_session_has_now_ended_enjoy_the_rest_of_your_day">Thank you for interacting with me today. \nThe session has now ended. \nEnjoy the rest of your day!</string>
    <string name="are_you_able_to_sit_up_in_bed_from_a_lying_position">Are you able to sit-up in bed from a lying position?</string>
    <string name="are_you_able_to_twist_your_torso_side_to_side">Are you able to twist your torso side to side?</string>
    <string name="how_do_you_typically_stand_up_from_a_chair">How do you typically stand up from a chair?</string>
    <string name="unable_to_stand_up_from_a_chair">1 - Unable to stand up from a chair</string>
    <string name="with_full_assistance_from_another_person">2 - With full assistance from another person</string>
    <string name="with_some_assistance_e_g_cane_walker_person">3 - With some assistance (e.g., cane, walker, person)</string>
    <string name="independently_but_need_to_use_arms">4 - Independently, but need to use arms</string>
    <string name="independently_without_using_arms">5 - Independently without using arms</string>
    <string name="how_difficult_is_it_for_you_to_climb_one_flight_of_stairs_about_10_12_steps">How difficult is it for you to climb one flight of stairs?</string>
    <string name="_1_not_difficult_at_all">1 - Not difficult at all</string>
    <string name="_2_a_little_difficult">2 - A little difficult</string>
    <string name="moderately_difficult">3 - Moderately difficult</string>
    <string name="extremely_difficult">4 - Extremely difficult</string>
    <string name="unable_to_do_it">5 - Unable to do it</string>
    <string name="how_difficult_is_it_for_you_to_climb_several_flights_of_stairs">How difficult is it for you to climb several flights of stairs?</string>
    <string name="how_difficult_is_it_for_you_to_walk_around_your_home">How difficult is it for you to walk around your home?</string>
    <string name="how_difficult_is_it_for_you_to_walk_continuously_for_10_minutes_without_stopping">How difficult is it for you to walk continuously for 10 minutes without stopping?</string>
    <string name="how_difficult_is_it_for_you_to_carry_a_bag_of_groceries_across_a_room">How difficult is it for you to carry a bag of groceries across a room?</string>
    <string name="how_difficult_is_it_for_you_to_bend_down_and_pick_up_a_small_object_e_g_a_book_from_the_floor">How difficult is it for you to bend down and pick up a small object (e.g. a book) from the floor?</string>
    <string name="how_often_do_you_exercise">How often do you exercise?</string>
    <string name="_1_never">1 - Never</string>
    <string name="_2_rarely_less_than_once_a_week">2 - Rarely (less than once a week)</string>
    <string name="_3_occassionally_1_2_times_a_week">3 - Occassionally (1-2 times a week)</string>
    <string name="_3_occasionally_1_2_times_a_week">3 - Occasionally (1-2 times a week)</string>
    <string name="_4_frequently_3_4_times_a_week">4 - Frequently (3-4 times a week)</string>
    <string name="_5_very_often_5_or_more_times_a_week">5 - Very often (5 or more times a week)</string>
    <string name="approximately_how_much_total_time_do_you_spend_exercising_or_being_physically_active_in_a_typical_week">Approximately how much total time do you spend exercising or being physically active in a typical week?</string>
    <string name="_1_less_than_30_minutes">1 - Less than 30 minutes</string>
    <string name="_2_30_59_minutes">2 - 30-59 minutes</string>
    <string name="_3_1_2_hours">3 - 1-2 hours</string>
    <string name="_4_2_4_hours">4 - 2-4 hours</string>
    <string name="_5_more_than_4_hours">5 - More than 4 hours</string>
    <string name="how_many_times_a_week_do_you_participate_in_vigorous_exercise_running_lifting_heavy_objects_strenuous_sports">How many times a week do you participate in vigorous exercise? (running, lifting heavy objects, strenuous sports)</string>
    <string name="_2_1_time">2 - 1 time</string>
    <string name="_3_2_times">3 - 2 times</string>
    <string name="_4_3_4_times">4 - 3-4 times</string>
    <string name="_5_5_or_more_times">5 - 5 or more times</string>
    <string name="how_many_times_a_week_do_you_participate_in_moderate_exercise_gardening_moving_a_table_pushing_a_vacuum_cleaner_bowling_golf">How many times a week do you participate in moderate exercise? (gardening, moving a table, pushing a vacuum cleaner, bowling, golf)</string>
    <string name="end_session">End Session</string>
    <string name="skip">Skip</string>
    <string name="dance_with_temi">Dance with Temi</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="before_the_dance_begins_make_sure_you_are_happy_with_the_distance_of_the_robot_and_then_press_play">Before the dance begins lets make sure you are happy with the distance of the robot. The researcher will move the robot for you, measure this distance, and then press play.</string>
    <string name="play_video">Play Video</string>
    <string name="let_s_dance">Let\'s Dance!</string>
    <string name="now_lets_re_adjust_the_distance_of_the_robot_so_that_you_can_answer_the_feedback_questions_the_researcher_will_move_the_robot_measure_the_distance_and_then_click_continue">Now lets re-adjust the distance of the robot so that you can answer the feedback questions. The researcher will move the robot, measure the distance, and then click continue.</string>
</resources>