<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q2Fragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-35dp">

    <include
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/q2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/would_you_like_to_change_your_level"
        android:textAlignment="center"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/progressionOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/progressionOptions"
        android:layout_width="198dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2">

        <RadioButton
            android:id="@+id/radioProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_up_a_level"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioMaintain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_at_the_same_level"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioRegress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_down_a_level"
            android:textAlignment="center" />

    </RadioGroup>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressionOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>